# minesweeper

./: .gitignore  README.md  app.out  default.nix  game.vala  main.vala  meson.build  meson.options
cli_frontend/: main.vala  parse_args.vala
gtk_frontend/: bomb_grid.vala  game_manager.vala  info_dialog.vala  main.vala  new_game_button.vala  tile_click_mode_button.vala
